--- a/on.qrc
+++ b/on.qrc
@@ -16,6 +16,7 @@
 <RCC>
     <qresource prefix="/">
         <file>images/new.png</file>
+        <file>images/open.png</file>
         <file>images/quit.png</file>
         <file>images/about.png</file>
         <file>images/icon.png</file>
